--- a/package.json
+++ b/package.json
@@ -3,22 +3,55 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@antv/g2": "^4.0.1",
+    "@babel/plugin-proposal-decorators": "^7.8.3",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/axios": "^0.14.0",
+    "@types/highlight.js": "^9.12.3",
     "@types/jest": "^24.0.0",
+    "@types/marked": "^0.7.3",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-infinite-scroller": "^1.2.1",
+    "@types/react-loadable": "^5.5.3",
+    "@types/react-redux": "^7.1.7",
+    "@types/react-router-config": "^5.0.1",
+    "@types/react-router-dom": "^5.1.3",
+    "antd": "^4.0.1",
+    "axios": "^0.19.2",
+    "babel-plugin-import": "^1.13.0",
+    "customize-cra": "^0.9.1",
+    "enquire-js": "^0.2.1",
+    "highlight.js": "^9.18.1",
+    "markdown-navbar": "^1.4.0",
+    "marked": "^0.8.0",
+    "node-sass": "^4.13.1",
+    "rc-queue-anim": "^1.8.4",
+    "rc-scroll-anim": "^2.7.4",
+    "rc-tween-one": "^2.6.8",
     "react": "^16.13.0",
+    "react-app-rewired": "^2.1.5",
     "react-dom": "^16.13.0",
+    "react-infinite-scroller": "^1.2.4",
+    "react-loadable": "^5.5.0",
+    "react-markdown": "^4.3.1",
+    "react-redux": "^7.2.0",
+    "react-router": "^5.1.2",
+    "react-router-config": "^5.1.1",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "sass-loader": "^8.0.2",
     "typescript": "~3.7.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "build-css": "node-sass-chokidar src/ -o src/",
+    "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -35,5 +68,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/redux-devtools-extension": "^2.13.2",
+    "redux-devtools-extension": "^2.13.8"
   }
 }
