--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react-redux": "^7.1.7",
     "@types/react-router-config": "^5.0.1",
     "@types/react-router-dom": "^5.1.3",
+    "@types/react-transition-group": "^4.2.4",
     "antd": "^4.0.1",
     "axios": "^0.19.2",
     "babel-plugin-import": "^1.13.0",
@@ -43,6 +44,7 @@
     "react-router-config": "^5.1.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "react-transition-group": "^4.3.0",
     "sass-loader": "^8.0.2",
     "typescript": "~3.7.2"
   },
